默认选中+纯CSS计划告吹

--- a/10-aliDriverLogin/login.html
+++ b/10-aliDriverLogin/login.html
@@ -15,7 +15,7 @@
   <div class="login-app">
     <div class="login-header">
       <!-- 短信登录&&账号登录 -->
-      <input type="radio" name="change-form" id="message"><label for="message" class="m-login-btn">短信登录</label>
+      <input type="radio" name="change-form" id="message" checked="checked"><label for="message" class="m-login-btn">短信登录</label>
       <input type="radio" name="change-form" id="username"><label for="username" class="u-login-btn">账号登录</label>
       <input type="radio" name="change-form" id="qrcode"><label for="qrcode" class="q-login-btn">扫码登录</label>
         <!-- name一样就是一组的单选 -->
@@ -45,6 +45,8 @@
       </div>
     </div>
   </div>
+
+  <script src=""></script>
 </body>
 
 </html>
