--- a/10-aliDriverLogin/login.html
+++ b/10-aliDriverLogin/login.html
@@ -34,7 +34,7 @@
   
         <form class="m-login-form" action="">
           <input type="text" placeholder="请输入手机号码">
-          <input type="text" placeholder="请输入验证码">
+          <input type="text" placeholder="登录密码">
     
           <button class="login-btn translucent">登录</button>
         </form>
