解决两边过头的动画会没有背景的问题

--- a/10-aliDriverLogin/login.html
+++ b/10-aliDriverLogin/login.html
@@ -22,6 +22,7 @@
     </div>
     <div class="login-body">
       <div id="form-bar">
+        <form-append></form-append>
         <form class="m-login-form" action="">
           <input type="text" placeholder="请输入手机号码">
           <input type="text" placeholder="请输入验证码"><button class="vercode-btn">获取验证码</button>
@@ -42,6 +43,8 @@
         <form class="m-login-form" action="">
   
         </form>
+        <form-append></form-append>
+        
       </div>
     </div>
   </div>
