--- a/10-aliDriverLogin/login.html
+++ b/10-aliDriverLogin/login.html
@@ -33,15 +33,17 @@
           <button class="login-btn translucent">登录</button>
         </form>
   
-        <form class="m-login-form" action="">
+        <form class="u-login-form" action="">
           <input type="text" placeholder="请输入手机号码">
           <input type="text" placeholder="登录密码">
     
           <button class="login-btn translucent">登录</button>
         </form>
   
-        <form class="m-login-form" action="">
-  
+        <form class="q-login-form" action="">
+          <div class="qrcode">
+            <img src="./qrcode.png" alt="">
+          </div>
         </form>
         <form-append></form-append>
         
