--- a/10-aliDriverLogin/login.html
+++ b/10-aliDriverLogin/login.html
@@ -22,7 +22,7 @@
     </div>
     <div class="login-body">
       <div id="form-bar">
-        <form-append></form-append>
+        <!-- <form-append></form-append> -->
         <form class="m-login-form" action="">
           <input type="text" placeholder="请输入手机号码">
           <input type="text" placeholder="请输入验证码"><button class="vercode-btn">获取验证码</button>
@@ -45,7 +45,7 @@
             <img src="./qrcode.png" alt="">
           </div>
         </form>
-        <form-append></form-append>
+        <!-- <form-append></form-append> -->
         
       </div>
     </div>
