:foucus增加和小优化

--- a/10-aliDriverLogin/login.html
+++ b/10-aliDriverLogin/login.html
@@ -35,7 +35,7 @@
   
         <form class="u-login-form" action="">
           <input type="text" placeholder="请输入手机号码">
-          <input type="text" placeholder="登录密码">
+          <input type="password" placeholder="登录密码">
     
           <button class="login-btn translucent">登录</button>
         </form>
