魔改滑动动效阿里云盘登录页21.06.27
https://www.bilibili.com/video/BV1JK4y1g7Bz/
修正账号登录的第二个input

--- a/10-aliDriverLogin/Pure-CSS/login.html
+++ b/10-aliDriverLogin/Pure-CSS/login.html
@@ -31,7 +31,7 @@
         <!-- 账号登录表单 -->
         <form action="" class="u-form">
           <input type="text" placeholder="请输入手机号码">
-          <input type="text" placeholder="请输入验证码">
+          <input type="password" placeholder="登录密码">
           <button class="login-btn">登录</button>
         </form>
         <!-- 扫码登录表单 -->
