3D翻转+樱花背景 登录页21.02.25
嘿，chromium更新了以后z轴又有一定问题了，干脆大改了一下，用父相子绝等于略微适配了下更高分辨率
https://www.bilibili.com/video/BV1cy4y1a7s7/

--- a/4-turnOverLogin/login.html
+++ b/4-turnOverLogin/login.html
@@ -9,28 +9,32 @@
 </head>
 <body>
 
-  <!-- 旋转开关 -->
-  <div class="switch"><h2>没有/已有账号？</h2></div>
-  <input type="checkbox" style="display: none;" id="change">
-    <label for="change">切 换</label>
-
-  <div class="turn">
-    <div class="over">
-      <form action="" class="login">
-        <h1>欢迎回来</h1>
-        <input type="text" placeholder="用户名">
-        <input type="password" placeholder="密码">
-        <input type="submit" class="btn" value="登 录">
-      </form>
-      <form action="" class="sign">
-        <h1>加入我们</h1>
-        <input type="text" placeholder="用户名">
-        <input type="password" placeholder="密码">
-        <input type="password" placeholder="确认密码">
-        <input type="submit" class="btn" value="注 册">
-      </form>
+<div class="fixed">
+  <div class="form-demo">
+    <!-- 旋转开关 -->
+    <div class="switch"><h2>没有/已有账号？</h2></div>
+    <input type="checkbox" style="display: none;" id="change">
+      <label for="change">切 换</label>
+  
+    <div class="turn">
+      <div class="over">
+        <form action="" class="login">
+          <h1>欢迎回来</h1>
+          <input type="text" placeholder="用户名">
+          <input type="password" placeholder="密码">
+          <input type="submit" class="btn" value="登 录">
+        </form>
+        <form action="" class="sign">
+          <h1>加入我们</h1>
+          <input type="text" placeholder="用户名">
+          <input type="password" placeholder="密码">
+          <input type="password" placeholder="确认密码">
+          <input type="submit" class="btn" value="注 册">
+        </form>
+      </div>
     </div>
   </div>
+</div>
 
 <!-- 以上部分是我之前收集的樱花<canvas>，本身我对 canvas也不是很会，可能因为我不是车务段的工作人员8。我会将其放在评论区，可以自行选用。另外如果有大佬可以让樱花可以在登录框前面飘动就好了。在这个视频的内容里所有出现的Js都是为了这个背景，实现3D翻转完全是CSS哈 -->
 
